# whistle

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
app/: index.html  package.json  tsconfig.json  vite.config.ts
app/src/: App.tsx  config.default.json  faucet.public.json  main.tsx
app/src/components/: ActivityFeed.tsx  AppShell.tsx  BetPanel.tsx  ClaimPanel.tsx  ClusterBadge.tsx  ConnectWalletButton.tsx  FeedModeToggle.tsx  FeedPanel.tsx  FixtureHeader.tsx  LiveStatStrip.tsx  LiveTicker.tsx  MarketCard.tsx  MatchTimeline.tsx  PnlStrip.tsx  ProofReceipt.tsx  SettlementModal.tsx  (+4 more)
app/vercel/: vercel.json
assets/: index-BsqfBY5l.js  index-Dzn7xAVP.css
docs/: DEMO_SCRIPT.md  FRONTEND_DESIGN.md  ORACLE_FACTS.md  PROJECT_STATUS.md  SECURITY.md  SETTLEMENT.md  SUBMISSION.md
programs/whistle/: Cargo.toml
programs/whistle/idls/: txoracle.json
programs/whistle/src/: errors.rs  lib.rs  oracle.rs  state.rs
programs/whistle/src/instructions/: claim.rs  create_market.rs  initialize_fixture.rs  join_market.rs  mod.rs  probe_validate.rs  settle.rs  void_market.rs
scripts/: build-pages.sh  build-vercel.sh  create-mock-usdc.ts  demo-scenario.ts  demo-settle-setup.ts  fetch-validation.ts  find-fixture.ts  probe-oracle.ts  seed-demo.ts  txline-auth.ts
scripts/lib/: anchor.ts  config.ts  pdas.ts  txline.ts
tests/: whistle.ts
video/: README.md  package.json  tsconfig.json
video/src/: Root.tsx  Social.tsx  Video.tsx  socialTimeline.ts  theme.ts  timeline.ts
(+33 files in other folders)
