[workspace]
members = ["programs/*"]
resolver = "2"

# Overflow checks on in release so any unchecked arithmetic in settlement
# code aborts rather than wraps. We also use explicit checked_* math in the
# handlers, so this is a second line of defense.
[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
